# easy_captcha

./: README.md
src/: main.c
src/tools/: Makefile.am  README.md  configure.ac  main.c  rgb2gray.c  rgb2gray.h
